<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login_Screen"
    android:gravity="center"
    android:background="@drawable/loginbackground">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customer_edittext"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="35sp"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:textAlignment="center"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customer_edittext"
                android:drawableLeft="@drawable/personimg"
                android:hint="@string/email"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:id="@+id/userl"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customer_edittext"
                android:drawableLeft="@drawable/passwordimg"
                android:hint="@string/password"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:id="@+id/passl"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:backgroundTint="@color/purple"
                android:id="@+id/btnl"
                />



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_a_user"
        android:gravity="center"
        android:textColor="@color/cardview_dark_background"/>

    <Button
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/signup"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:id="@+id/loginsignupbtn"/>






</LinearLayout>